pages/index.css
.page {
  min-width: 1100px;
  max-width: 1600px;
  font-family: "Inter", arial, sans-serif;
  font-size: 16px;
  line-height: 20px;
  margin-left: auto;
  margin-right: auto;
}

.header {
  padding: 30px 80px 40px;
  min-height: 720px;
  max-height: 800px;
  height: 100vh;
  display: flex;
  flex-direction: column;
  background-image: url(../images/background_header.svg);
  background-size: cover;
}

.nav {
  display: flex;
  justify-content: space-between;
}

.nav__logo {
  position: relative;
  left: -50px;
}

.nav__links {
  display: flex;
  padding: 0;
  margin: 0;
  list-style-type: none;
  gap: 20px;
  font-family: "Inter";
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 20px;
}

.nav__link {
  color: #000;
  text-decoration: none;
}

.header__title {
  max-width: 729px;
  font-size: 60px;
  line-height: 70px;
  margin: 183px 0 0;
  letter-spacing: -0.6px;
  font-weight: 500;
}

.header__description {
  max-width: 683px;
  font-size: 20px;
  line-height: 30px;
  margin: 28px 0 0;
  font-family: "Noto Serif";
  font-style: normal;
  font-weight: normal;
  font-size: 20px;
  line-height: 30px;
}

.header__image {
  max-width: 646px;
  max-height: 568px;
  position: absolute;
  top: 124px;
  right: 5px;
}

.header__span-accent {
  display: block;
  font-family: "Inter";
  font-style: italic;
  font-weight: normal;
  font-size: 60px;
  line-height: 72px;
  color: #2f80ed;
}

.header__footer {
  display: flex;
  justify-content: space-between;
  margin-top: auto;
  font-family: "Inter";
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 20px;
  color: #838383;
}

.header__paragraph {
  margin: 0;
}

.recipes {
  padding: 100px 80px 215px;
  background-color: #0a2750;
  background-image: url(../images/background_recipes.svg);
  background-position: center;
  color: white;
}

.recipes__title {
  max-width: 580px;
  margin-bottom: auto;
  font-family: "Inter";
  font-style: normal;
  font-weight: 500;
  font-size: 44px;
  line-height: 52px;
}

.recipes__subtitles {
  max-width: 438px;
  margin-top: 24px;
  margin-left: 80px;
  margin-bottom: auto;
  font-family: "Noto Serif";
  font-style: normal;
  font-weight: normal;
  font-size: 20px;
  line-height: 30px;
  margin: 24px 0px 0px;
}

.recipes__videos {
  max-width: 920px;
  margin-top: 80px;
  display: flex;
  justify-content: space-around;
  gap: 40px;
  position: relative;
}

.recipes__video {
  max-width: 480px;
  max-height: 273px;
}

.recipes__videos-caption {
  display: flex;
  justify-content: space-between;
  margin-top: 24px;
}

